@@ -615,6 +615,7 @@ wxMSW:
 - Fix wxEVT_TREE_STATE_IMAGE_CLICK generation (Antal).
 - Fix wxDV_ROW_LINES in horizontally scrolled wxDataViewCtrl.
 - Fix RegisterHotKey() with negative IDs (troelsk).
+- Fix event object type for wxEVT_SPINCTRL events.
 
 wxOSX:
 
